--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&amp;family=Sen:wght@700&amp;display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>figma to html</title>
   </head>
-  <body>
-    <h1>Figma to html</h1>
-    <h2>bánh mì ram ram</h2>
+  <body style="height: 10000px">
+    <header class="header fixed">
+      <div class="main-content">
+        <div class="body">
+          <img src="/assets/img/Lesson..png" alt="Lesson" class="logo" />
+          <nav class="nav">
+            <ul class="ds_nav">
+              <li class="active">
+                <a href="#!">Home</a>
+              </li>
+              <li>
+                <a href="#!">Courses</a>
+              </li>
+              <li>
+                <a href="#!">Pricing</a>
+              </li>
+              <li>
+                <a href="#!">Reviews</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="action">
+            <a class="btn btn_sign_up" href="#!">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
