--- a/index.html
+++ b/index.html
@@ -38,5 +38,216 @@
         </div>
       </div>
     </header>
+    <main>
+      <!-- <======================Hero========================> -->
+      <div class="hero">
+        <div class="main-content">
+          <div class="hero-body">
+            <div class="hero-left">
+              <div class="img-hero">
+                <img src="/assets/img/guy-lesson 1.jpg" alt="image hero" />
+              </div>
+              <div class="card">
+                <div class="item item1">
+                  <div class="icon icon1">
+                    <img src="/assets/icon/Orion_page.svg" alt="UI/UX Design" />
+                  </div>
+                  <div class="desc-item">
+                    <p class="courses">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon icon2">
+                    <img src="/assets/img/Development.jpg" alt="UI/UX Design" />
+                  </div>
+                  <div class="desc-item">
+                    <p class="courses">20 Courses</p>
+                    <p class="title">Development</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon icon3">
+                    <img
+                      src="/assets/img/Orion_megaphone (2).jpg"
+                      alt="Marketing"
+                    />
+                  </div>
+                  <div class="desc-item">
+                    <p class="courses">20 Courses</p>
+                    <p class="title">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="hero-right">
+              <h1 class="overview">
+                Learn without limits and spread knowledge.
+              </h1>
+              <p class="desc-p desc-hero-right">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+
+              <div class="click-hero-right">
+                <div class="btn btn-see-courses">
+                  <a href="#!">See Courses</a>
+                </div>
+                <button>
+                  <div class="watch-vd">
+                    <div class="icon-play">
+                      <img
+                        src="/assets/img/Polygon 2 (1).jpg"
+                        alt="icon Watch Video"
+                      />
+                    </div>
+                    <span>Watch Video</span>
+                  </div>
+                </button>
+              </div>
+              <p class="desc-hero-right desc-recent">Recent engagement</p>
+              <p class="desc-hero-right desc-stat">
+                <strong>50K</strong> Students <strong>70+</strong> Courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <======================popular========================> -->
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <!-- <======================popular-top-left========================> -->
+            <div class="info-popular-top">
+              <h2 class="title-lv2">Our popular courses</h2>
+              <p class="desc desc-p">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <!-- <======================popular-top-right========================> -->
+            <div class="control">
+              <button class="btn-control btn-ctrl-left">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="btn-control btn-ctrl-right">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <!-- <======================popular-bottom========================> -->
+          <div class="popular-bottom">
+            <!-- <======================courses-item1========================> -->
+            <div class="courses-item">
+              <img
+                src="/assets/img/Basic web design.jpg"
+                alt="Basic web design"
+                class="thumb"
+              />
+              <div class="content-courses">
+                <div class="name_courses-rating">
+                  <h3 class="name_courses">Basic web design</h3>
+                  <div class="rating">
+                    <img src="/assets/icon/Star 6.svg" alt="star" />
+                    <span>4.5</span>
+                  </div>
+                </div>
+                <p class="desc-p desc-courses">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot-item">
+                  <span class="price">$120.75</span>
+                  <div class="book-now">
+                    <a class="btn btn-book-now" href="#!">Book Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <======================courses-item2========================> -->
+            <div class="courses-item">
+              <img
+                src="/assets/img/UIUX Design.jpg"
+                alt="UI/UX Design"
+                class="thumb"
+              />
+              <div class="content-courses">
+                <div class="name_courses-rating">
+                  <h3 class="name_courses">UI/UX design</h3>
+                  <div class="rating">
+                    <img src="/assets/icon/Star 6.svg" alt="star" />
+                    <span>4.5</span>
+                  </div>
+                </div>
+                <p class="desc-p desc-courses">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot-item">
+                  <span class="price">$120.75</span>
+                  <div class="book-now">
+                    <a class="btn btn-book-now" href="#!">Book Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <======================courses-item3========================> -->
+            <div class="courses-item">
+              <img
+                src="/assets/img/Web App design.jpg"
+                alt="Web App design"
+                class="thumb"
+              />
+              <div class="content-courses">
+                <div class="name_courses-rating">
+                  <h3 class="name_courses">Web App design</h3>
+                  <div class="rating">
+                    <img src="/assets/icon/Star 6.svg" alt="star" />
+                    <span>4.5</span>
+                  </div>
+                </div>
+                <p class="desc-p desc-courses">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot-item">
+                  <span class="price">$120.75</span>
+                  <div class="book-now">
+                    <a class="btn btn-book-now" href="#!">Book Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
